--- a/profkat-base-module/src/main/resources/META-INF/resources/css/style_biogr_article.css
+++ b/profkat-base-module/src/main/resources/META-INF/resources/css/style_biogr_article.css
@@ -1,6 +1,6 @@
 /* =================================================================== */
-/* $Revision: 1.13 $ $Date: 2011/01/31 04:00:23 $                                                   */
-/* CSS für biographische Artikel                                       */
+/* $Revision: 1.13 $ $Date: 2011/01/31 04:00:23 $                      */
+/* CSS für biographische Artikel                                      */
 /* =================================================================== */
 
 div.article{
@@ -10,35 +10,35 @@ div.article{
 	line-height:150%;
 }
 
-blockquote{
+div.article blockquote{
 	line-height:110%;
 	font-size:10pt;
 }
 	
-h1{
+div.article h1{
 	text-align:center;
 	font-size:14pt;
 	font-weight:bold;
 }
 
-h2{
+div.article h2{
 	text-align:center;
 	font-size:11pt;
 	font-weight:bold;
 }
 
-div.author{
+div.article div.author{
 	margin-top:30px;
 	text-align:right;
 	font-style:italic;
 }
 
-div.footnotes{
+div.article div.footnotes{
 	line-height:110%;
 	margin-top:40px;
 	font-size:8pt;
 }
-div.list{
+div.article div.list{
 	text-align:left;
 	font-size:10pt;
 }
