--- a/profkat-base-module/src/main/resources/META-INF/resources/css/profkat.css
+++ b/profkat-base-module/src/main/resources/META-INF/resources/css/profkat.css
@@ -37,11 +37,10 @@ div.docdetails-image div{
 }
 
 .docdetails-table.col_derivates tr > td.icon{
-	width: 1.5em;
-    font-size: 2.4em;
-    vertical-align: middle;
-    padding-bottom:0.5em;
-    padding-left:1em;
+	width:1.8em;
+	font-size: 2.2em;
+	vertical-align: middle;
+	padding: 0 0.5em 0.5em 0.5em;
 }
 
 .docdetails-separator + .docdetails-separator {
