#6 show derivate content via XSLT3 (e.g. biogr. articles)

--- a/profkat-base-module/src/main/resources/META-INF/resources/css/profkat.css
+++ b/profkat-base-module/src/main/resources/META-INF/resources/css/profkat.css
@@ -43,6 +43,16 @@ div.docdetails-image div{
 	padding: 0 0.5em 0.5em 0.5em;
 }
 
+.docdetails-tabbar{
+	margin-top:2em;
+}
 .docdetails-separator + .docdetails-separator {
 	display:none;
+}
+span.docdetails-citation{
+	float:right;
+	padding-top:1em;
+	font-style:italic;
+	width: 66%;
+    text-align: right;
 }
