default css for indexbrowser buttons

--- a/profkat-base-module/src/main/resources/META-INF/resources/css/profkat.css
+++ b/profkat-base-module/src/main/resources/META-INF/resources/css/profkat.css
@@ -1,3 +1,11 @@
+
+.indexbrowser-btn{
+      min-width: 1.5em;
+      margin-top:0.40em;
+      padding-left:0.40em;
+      padding-right:0.40em;
+}
+
 div.docdetails-image div{
 	max-width:250px;
 	margin-left:auto;
