fix css for separator <hr> in docdetails

--- a/profkat-base-module/src/main/resources/META-INF/resources/css/profkat.css
+++ b/profkat-base-module/src/main/resources/META-INF/resources/css/profkat.css
@@ -101,7 +101,7 @@ div.docdetails-separator {
 	margin-top:.8em;
 }
 div.docdetails-separator hr {
-	border-bottom: 1px solid #565656;
+	border-top: 1px solid #565656;
 	height: 1px;	
 }
 
