use CSS class 'docdetails-sublabel' for label within docdetails data
(e.g. title of publication for doctoral degree)

--- a/profkat-base-module/src/main/resources/META-INF/resources/css/profkat.css
+++ b/profkat-base-module/src/main/resources/META-INF/resources/css/profkat.css
@@ -114,7 +114,8 @@ div.docdetails-separator hr {
 	display:none;
 }
 
-div.docdetails-label {
+span.docdetails-label,
+span.docdetails-sublabel {
 	white-space:nowrap;
 	color:#565656;
 	font-family: Verdana,Arial,sans-serif;
